--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       score.Loses =0;
       score.Draw = 0;
       localStorage.removeItem('score');
-      updateScoreElement();
+      resetScoreElement();
       ">Reset score</button>
 
       <button class="autoplay-button" onclick="
